# peach

./: .clang-tidy  .gitignore  CMakeLists.txt  build_win.bat
conf/shader/: shader.fs  shader.vs
resources/shaders/: cube_shader.fs  light_shader.vs
src/: CMakeLists.txt  main.cpp
src/peach/: CMakeLists.txt  ShaderSource.h  VertexData.h  data.h  main.cpp  peach.h  render.h  shader.h
