set(GLM_INC_DIR ${PEACH_THIRD_PARTY_DIR}/glm)
set(GLAD_INC_DIR ${PEACH_THIRD_PARTY_DIR}/glad/include)
file(GLOB_RECURSE GLAD_SRC_LIST ${PEACH_THIRD_PARTY_DIR}/glad/src/*.c)
set(GLFW_INC_DIR ${PEACH_THIRD_PARTY_DIR}/include ${PEACH_THIRD_PARTY_DIR}/glfw/deps)
SET(PEACH_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(THIRD_PARTY_INC_DIR ${PEACH_THIRD_PARTY_DIR})

add_subdirectory(peach)